--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
@@ -1,1 +1,246 @@
-<p>employee-edit works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/home.css">
+  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <!-- Custom styles for this template -->
+  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this page -->
+  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <title>Chỉnh sửa thông tin nhân viên</title>
+</head>
+<body>
+</body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Tin tức</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
+      </li>
+    </ul>
+    <div class="dropleft">
+      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
+      </div>
+    </div>
+  </div>
+</nav>
+<div class="container-fluid" id="content">
+  <div class="row">
+    <div class="col-lg-3 ml-0">
+      <!-- Sidebar -->
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+          <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+              Quản lý nhân viên
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+              <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+              Quản lý thông báo
+            </a>
+          </li>
+
+        </ul>
+        <hr>
+
+        <!-- Sidebar -->
+      </div>
+    </div>
+    <div class="col-lg-9 ">
+      <div style="margin-left: auto; margin-right: auto; width: auto;">
+        <div class=" container1">
+          <div class="card" style="width: 85%;">
+            <ul class="list-group list-group-flush">
+              <li class="h2"><h2>Chỉnh sửa thông tin nhân viên</h2></li>
+              <li class="list-group-item">
+                <div class="table-wrapper-scroll-y my-custom-scrollbar">
+                  <form class=" container1" [formGroup]="employeeForm" (ngSubmit)="updateEmployee()">
+                    <div class="mb-3 row">
+                      <label for="id" class="col-sm-3 col-form-label">Mã NV:</label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control" id="id" disabled formControlName="id">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="name" class="col-sm-3 col-form-label">Họ và Tên:</label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control" id="name" placeholder="" value="Nguyễn Văn Viễn">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="accName" class="col-sm-3 col-form-label">Tên tài khoản:</label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control" id="accName" placeholder="" value="VienNguyen04">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="password" class="col-sm-3 col-form-label">Mật khẩu:</label>
+                      <div class="col-sm-9">
+                        <input type="password" class="form-control" id="password" placeholder="" value="matkhau02">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="password2" class="col-sm-3 col-form-label">Xác nhận mật khẩu:</label>
+                      <div class="col-sm-9">
+                        <input type="password" class="form-control" id="password2" placeholder="" value="matkhau02">
+                        <span id="" class="form-text" style="color: red">
+                                                      Phải trùng với mật khẩu trên.
+                                                    </span>
+                      </div>
+
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="email" class="col-sm-3 col-form-label">Email:</label>
+                      <div class="col-sm-9">
+                        <input type="email" class="form-control" id="email" placeholder="" value="NguyenVien@gmail.com">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="date" class="col-sm-3 col-form-label">Ngày sinh:</label>
+                      <div class="col-sm-9">
+                        <input type="date" class="form-control" id="date" placeholder="" value="02/02/1995">
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label class="col-sm-3 col-form-label">Giới tính:</label>
+                      <div class="col-sm-9">
+                        <input type="radio" checked placeholder="">Nam
+                        <input type="radio" placeholder="">Nữ
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <label for="idCard" class="col-sm-3 col-form-label">CMND:</label>
+                      <div class="col-sm-9">
+                        <input type="text" class="form-control" id="idCard" >
+                        <span class="form-text" style="color: red">
+                                                    </span>
+                      </div>
+                    </div>
+                    <div class="mb-3 row">
+                      <div class="col-sm-12" style="text-align: center">
+                        <button type="submit" class="btn btn-info" style="margin-right: 50px">Chỉnh sửa</button>
+                        <button type="button" class="btn btn-primary" [routerLink]="['/employee']">Quay lại</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<footer class="">
+  <div class="container py-5">
+    <div class="row py-4">
+      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
+        <ul class="list-inline mt-4">
+          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
+            class="fa fa-twitter i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i
+            class="fa fa-facebook i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i
+            class="fa fa-instagram i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i
+            class="fa fa-pinterest i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i
+            class="fa fa-vimeo i-footer"></i></a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
+        <ul class="list-unstyled mb-0">
+          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-lg-0">
+        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
+        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
+        <div class="p-1 rounded border">
+          <div class="input-group">
+            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
+                   class="form-control border-0 shadow-0">
+            <div class="input-group-append">
+              <button id="button-addon1" type="submit" class="btn btn-link"><i
+                class="fa fa-paper-plane"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Copyrights -->
+  <div class="bg-light py-4">
+    <div class="container text-center">
+      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
+    </div>
+  </div>
+</footer>
+</html>
+
