--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/home.css">
-  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-  <!-- Custom styles for this template -->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this page -->
-  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-  <title>Chỉnh sửa thông tin nhân viên</title>
-</head>
-<body>
-</body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -97,7 +76,7 @@
                     <div class="mb-3 row">
                       <label for="id" class="col-sm-3 col-form-label">Mã NV:</label>
                       <div class="col-sm-9">
-                        <input type="text" class="form-control" id="id" disabled formControlName="id">
+                        <input type="text" class="form-control" id="id" disabled formControlName="employeeId">
                         <span class="form-text" style="color: red">
                                                     </span>
                       </div>
@@ -105,7 +84,7 @@
                     <div class="mb-3 row">
                       <label for="name" class="col-sm-3 col-form-label">Họ và Tên:</label>
                       <div class="col-sm-9">
-                        <input type="text" class="form-control" id="name" placeholder="" value="Nguyễn Văn Viễn">
+                        <input type="text" class="form-control" id="name" formControlName="employeeId">
                         <span class="form-text" style="color: red">
                                                     </span>
                       </div>
@@ -183,7 +162,6 @@
     </div>
   </div>
 </div>
-</div>
 <footer class="">
   <div class="container py-5">
     <div class="row py-4">
@@ -242,5 +220,4 @@
     </div>
   </div>
 </footer>
-</html>
 
