--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -87,7 +87,7 @@
                 <!--                </button>-->
                 <form [formGroup]="entitiesForm" (ngSubmit)="searchEntities()">
                   <div class="form-outline">
-                    <input id="search-focus" type="search" id="form1" class="form-control"
+                    <input id="search-focus" type="search" id="form1" class="form-control" formControlName=""
                            placeholder="Nhập mã cá thể"/>
                   </div>
                   <button type="submit" class="btn btn-primary">
