--- a/angular/angular-template/src/app/entities/entities-delete/entities-delete.component.html
+++ b/angular/angular-template/src/app/entities/entities-delete/entities-delete.component.html
@@ -1,29 +1,6 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-
-<!--<head>-->
-<!--  <meta charset="UTF-8" />-->
-<!--  <meta http-equiv="X-UA-Compatible" content="IE=edge" />-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
-<!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"-->
-<!--        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />-->
-<!--  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"-->
-<!--          integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
-<!--          crossorigin="anonymous"></script>-->
-<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"-->
-<!--          integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"-->
-<!--          crossorigin="anonymous"></script>-->
-<!--  <link rel="stylesheet" href="project1.css" />-->
-<!--  <script src="https://kit.fontawesome.com/d3ad0e260e.js" crossorigin="anonymous"></script>-->
-<!--  <title>Home</title>-->
-<!--</head>-->
-
-<!--<body>-->
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="image/1x/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    BREEDER
-  </a>
+  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -46,92 +23,55 @@
     </ul>
     <div class="dropleft">
       <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-        Putin <i class="fa-solid fa-circle-user"></i>
-      </button>
+              aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item item-function-1" href="#">
-          <i class="fa-solid fa-gears"></i> Quản lý hệ thống
-        </a>
-        <a class="dropdown-item item-function-2" href="#">
-          <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
-        <a class="dropdown-item item-function-3" href="#">
-          <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
-        <a class="dropdown-item item-function-4" href="#">
-          <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
-        <a class="dropdown-item item-function-5" href="#">
-          <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-        <a class="dropdown-item item-function-6" href="#" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-      </div>
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-           aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">
-                Hãy xác nhận!
-              </h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">Bạn có muốn đăng xuất không?</div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                Không
-              </button>
-              <button type="button" class="btn btn-confirm-logout">
-                Có
-              </button>
-            </div>
-          </div>
-        </div>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
+        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
       </div>
     </div>
   </div>
 </nav>
-
-<div class="container-fluid  mt-4 mb-5" id="content">
+<div class="container-fluid" id="content">
   <div class="row">
-    <div class="col-lg-3">
-      <!-- <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action ">  Nhu cầu dùng gạo làm thức ăn chăn nuôi ở châu Á
-          tăng mạnh</a>
-        <a href="#" class="list-group-item list-group-item-action">Rất nhiều “nút thắt” lớn cần tháo gỡ để cứu ngành
-          chăn nuôi
-          lợn</a>
-        <a href="#" class="list-group-item list-group-item-action">Quảng Trị: Gỡ vướng cho các dự án chăn nuôi lợn
-          công nghệ cao</a>
-        <a href="#" class="list-group-item list-group-item-action disabled">Bức tranh ngành thức ăn chăn nuôi trong
-          bối cảnh bão giá nguyên
-          liệu đầu vào</a>
-      </div> -->
-      <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <img src="image/list1.webp" width="50" height="50" class="mr-2" alt="">
-          <a href=" " class="list-group-item-action">Nhu cầu dùng gạo làm thức ăn chăn nuôi ở châu Á
-            tăng mạnh</a>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <img src="image/Chan-Nuoi-Gia-Lon-Ho-01.jpg" width="50" height="50" class="mr-2" alt="">
-          <a href=" " class="list-group-item-action">Rất nhiều “nút thắt” lớn cần tháo gỡ để cứu ngành
-            chăn nuôi</a>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <img src="image/2.jpg" width="50" height="50" class="mr-2" alt="">
-          <a href=" " class="list-group-item-action">Quảng Trị: Gỡ vướng cho các dự án chăn nuôi lợn
-            công nghệ cao</a>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <img src="image/phan-bon-1-105638_53.webp" width="50" height="50" class="mr-2" alt="">
-          <a href=" " class="list-group-item-action">Bức tranh ngành thức ăn chăn nuôi trong
-            bối cảnh bão giá nguyên</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col-lg-9">
+    <div class="col-lg-3 ml-0">
+      <!-- Sidebar -->
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <svg class="bi me-2" width="40" height="32">
+            <use xlink:href="#bootstrap"/>
+          </svg>
+          <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
+        </a>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active" aria-current="page">
+              <svg class="bi me-2" width="16" height="16">
+                <use xlink:href="#home"/>
+              </svg>
+              Quản lý cá thể
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav-link link-dark">
+              <svg class="bi me-2" width="16" height="16">
+                <use xlink:href="#speedometer2"/>
+              </svg>
+              Quản lý thông báo
+            </a>
+          </li>
 
+        </ul>
+        <hr>
+
+        <!-- Sidebar -->
+      </div>
+    </div>
+    <div class="col-lg-9 ">
 
 
       <!--            table entities-->
@@ -158,34 +98,25 @@
 
 
 
-
-
-
     </div>
   </div>
 </div>
 <footer class="">
   <div class="container py-5">
-    <div class="row">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-        <img src="img/logo.png" alt="" width="180" class="mb-3" />
+    <div class="row py-4">
+      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
         <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
         <ul class="list-inline mt-4">
-          <li class="list-inline-item">
-            <a href="#" target="_blank" title="twitter"><i class="fa fa-twitter i-footer"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#" target="_blank" title="facebook"><i class="fa fa-facebook i-footer"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#" target="_blank" title="instagram"><i class="fa fa-instagram i-footer"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest i-footer"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo i-footer"></i></a>
-          </li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
+            class="fa fa-twitter i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i
+            class="fa fa-facebook i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i
+            class="fa fa-instagram i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i
+            class="fa fa-pinterest i-footer"></i></a></li>
+          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i
+            class="fa fa-vimeo i-footer"></i></a></li>
         </ul>
       </div>
       <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
@@ -201,22 +132,18 @@
         <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
         <ul class="list-unstyled mb-0">
           <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Đăng ký</a></li>
+          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
         </ul>
       </div>
       <div class="col-lg-4 col-md-6 mb-lg-0">
         <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
-        <p class="text-muted mb-4">
-          Mọi thắc mắc xin liên hệ cho chúng tôi.
-        </p>
+        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
         <div class="p-1 rounded border">
           <div class="input-group">
             <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
-                   class="form-control border-0 shadow-0" />
+                   class="form-control border-0 shadow-0">
             <div class="input-group-append">
-              <button id="button-addon1" type="submit" class="btn btn-link">
-                <i class="fa fa-paper-plane"></i>
-              </button>
+              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
             </div>
           </div>
         </div>
@@ -225,12 +152,10 @@
   </div>
 
   <!-- Copyrights -->
-  <!-- <div class="bg-light py-4">
-        <div class="container text-center">
-          <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
-        </div>
-      </div> -->
+  <div class="bg-light py-4">
+    <div class="container text-center">
+      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
+    </div>
+  </div>
 </footer>
-<!--</body>-->
-
-<!--</html>-->
+</body>
